--- a/hangman.html
+++ b/hangman.html
@@ -8,10 +8,10 @@
     <div ng-controller="ctrl1">
       <span>Val:</span>
       <input type="text" ng-model="first" />
-      <p>{{first}}</p>
+      <!-- <p>{{first}}</p> -->
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script src="./hangman.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="./hangman.js"></script> -->
   </body>
 </html>
