--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Game Time</h1>
       <div>
         <h3>The word is: {{secretWord}}</h3>
-
+        <p class="left">you left with {{guesses}} guesses...</p>
         <h4>allready Guess: {{incorrectGuess}}</h4>
         <br />
         <h2 ng-controller="gameCtrl"></h2>
